# src/endpoints/write.ts
@@ -1,7 +1,9 @@
 import { Request, Response } from "express";
+import { generatePrompt } from "./helper/generate_prompt";
+import { generateVerdict } from "./helper/generate_response";
 
 // write route
-export const writeRoute = (req: Request, res: Response) => {
+export const writeRoute = async (req: Request, res: Response) => {
   const {
     designation, // receiver's designation
     destination, // receiver's destination
@@ -13,7 +15,7 @@ export const writeRoute = (req: Request, res: Response) => {
     name_footer, // your rollno/your designation goes here
   } = req.body;
 
-  // Check if any fields is missing
+  // Check if any field is missing
   if (
     !designation ||
     !destination ||
@@ -29,11 +31,31 @@ export const writeRoute = (req: Request, res: Response) => {
     });
   }
 
-  console.log("Received data:", req.body);
+  try {
+    const finalPrompt: string = generatePrompt(
+      designation,
+      destination,
+      date,
+      receiver_gender,
+      subject,
+      miscellaneous_info,
+      your_name,
+      name_footer
+    );
 
-  // success message
-  res.json({
-    message: "Temp Logs",
-    data: req.body,
-  });
+    const finalResponse: string = await generateVerdict(finalPrompt);
+
+    // debug
+    // console.log(finalPrompt);
+    console.log(finalResponse);
+
+    res.status(200).json({
+      message: finalResponse,
+    });
+  } catch (error) {
+    console.error("Error:", error);
+    res.status(500).json({
+      message: "Error",
+    });
+  }
 };
